    + debian/patches/03_avoid_unresolved_x_symbols.patch:
      - Removed, applied upstream.
    + debian/patches/changeset_150117.diff:
      - Backport patch from upstream to fix the documentation build.
    + debian/*.symbols:
      - Updated.
    + debian/libwebkit2gtk-3.0-0.install:
      - Don't install .la files.
  * debian/watch:
    + Updated to work with the new page.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 29 May 2013 10:39:29 +0200

webkitgtk (1.11.91-1) experimental; urgency=low

  * New development release
  * debian/patches/03_avoid_unresolved_x_symbols.patch:
  - patch to avoid linking issue
  * debian/rules:
  - enable WebKit2 packages
  * debian/*.symbols:
  - updated with new symbols
  * debian/control:
  - add libwebp-dev to the build dependencies
  - add libsecret-1-dev to build dependencies
  - add libharfbuzz-dev >= 0.9.7 to build dependencies
  * debian/libwebkitgtk-3.0-dev.install:
  - install webkitdom includes, which now live in a new path

 -- Gustavo Noronha Silva <kov@debian.org>  Sun, 17 Mar 2013 11:43:34 -0300

webkitgtk (1.10.2-2) experimental; urgency=low

  * Integrate patches and acknowledge NMUs; thanks to Ansgar Burchardt
    <ansgar@debian.org>, and Michael Gilbert <mgilbert@debian.org>
  * debian/control, debian/rules:
  - switch to building with GStreamer 1.0
  * debian/control:
  - added ruby to the Build-Dependencies, it is now required
    for building WebKit
  * debian/rules:
  - ensure configure is the last command run in a single shell invocation,
    so the build fails early if configure fails

 -- Gustavo Noronha Silva <kov@debian.org>  Sun, 24 Feb 2013 16:51:07 -0300

webkitgtk (1.10.2-1) experimental; urgency=low

  * New stable release
  - source package renamed following upstream
  - Includes the WebCore split patches, so the make command line
    limit problem should not happen
  * Acknowledge NMU to fix FreeBSD and Hurd, thanks to Samuel
    Thibault <sthibault@debian.org>